delete timer fix & fix overflow

--- a/styles/base/_helpers.scss
+++ b/styles/base/_helpers.scss
@@ -31,6 +31,10 @@
     scroll-behavior: initial;
 }
 
+.is-overflow-hidden {
+    overflow: hidden
+}
+
 .overflow-fix {
     @extend %overflow-fix;
 }
