--- a/styles/module/usefull/templates/Modal-basket.module.scss
+++ b/styles/module/usefull/templates/Modal-basket.module.scss
@@ -218,48 +218,92 @@
 }
 
 .deleteNotification {
-    left: 9px;
+    left: 10px;
     bottom: 0;
     z-index: 3;
     height: 58px;
     display: flex;
+    padding: 0 16px;
     position: absolute;
     border-radius: 8px;
-    padding: 0 16px 0 0;
     align-items: center;
     pointer-events: all;
     background-color: var(--t-background);
     box-shadow: 0px 4px 15px 3px #0000001F;
     right: adaptive-value((
-        xs: 25px,
-        md: 41px,
-        lg: 57px,
-        xl: 81px,
+        xs: 26px,
+        md: 42px,
+        lg: 58px,
+        xl: 82px,
     ));
+
+    // opacity: 1!important;
+    // transform: translateY(-300px)!important;
 }
 
 .deleteTimer {
+    width: 36px;
     height: 36px;
     display: flex;
+    min-width: 36px;
     position: relative;
     align-items: center;
-    transform: scale(-1, 1);
     justify-content: center;
+    
+    &.animated {
+        circle {
+            stroke: #E21B25;
+            stroke-dashoffset: 1;
+            transition: stroke-dashoffset 4.9s linear, stroke 0.3s 2.5s;
+        }
+
+        text {
+            fill: #E21B25;
+            transition: fill 0.3s 2.5s;
+        }
+    }
+
+    svg {
+        width: 100%;
+        height: 100%;
+    }
+
+    circle {
+        fill: none;
+        width: 26px;
+        height: 26px;
+        stroke-width: 2px;
+        stroke-opacity: 1;
+        stroke-dasharray: 1;
+        stroke-dashoffset: 0;
+        stroke: var(--t-text);
+        stroke-linecap: round;
+        transform-origin: center;
+        transform: rotate(-90deg) scale(1, -1);
+        // animation: name 5s linear 0s infinite;
+    }
+
+    text {
+        font-size: 12px;
+        font-weight: 700;
+        line-height: 12px;
+        font-style: normal;
+        transform: translateY(4px);
+    }
 }
 
-.deleteTimerText {
-    font-size: 12px;
-    margin-top: 2px;
-    font-weight: 700;
-    margin-left: -1px;
-    line-height: 12px;
-    position: absolute;
-    font-style: normal;
-    transform: scale(-1, 1);
+@keyframes name {
+    from {
+        stroke-dashoffset: 0;
+    }
+    to {
+        stroke-dashoffset: 1;
+    }
 }
 
 .deleteNotificationText {
     width: 100%;
+    margin-left: 8px;
 }
 
 .deleteNotificationReturn {
@@ -308,7 +352,7 @@
 }
 
 .basketPrice {
-    min-width: 120px;
+    min-width: 136px;
     margin-right: 30px;
 
     * {
